--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ permalink:      /:year-:month-:day/:title
 paginate:       5
 
 # Excludes
-exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
+exclude: [ Gemfile, Gemfile.lock, tale.gemspec, process_info.py ]
 
 keep_files: [assets]
 
