--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,13 @@
-#name Site settings
+# Site settings
 title:          "MLFL"
 description:    "Machine Learning & Friends Lunch"
 baseurl:        ""
 url:            "https://umass-mlfl.github.io"
+
+# MLFL settings
+current_semester_name: "Fall 2020"
+current_sem_start: 2020-01-20
+current_sem_end: 2020-04-29
 
 # Author
 author:
