--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:        ""
 url:            "https://umass-mlfl.github.io"
 
 # MLFL settings
-current_semester_name: "Fall 2020"
+current_semester_name: "Spring 2020"
 current_sem_start: 2020-01-20
 current_sem_end: 2020-04-29
 
