--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl:        ""
 url:            "https://umass-mlfl.github.io"
 
 # MLFL settings
-current_semester_name: "Spring 2021"
-current_sem_start: 2021-01-01
-current_sem_end: 2021-05-31
+current_semester_name: "Fall 2021"
+current_sem_start: 2021-09-01
+current_sem_end: 2021-12-31
 
 # Author
 author:
