--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ current_sem_end: 2022-12-17
 
 # Author
 author:
-  name:         Kalpesh Krishna, Neha Kennard, Wenlong Zhao
+  name:         Kalpesh Krishna, Neha Kennard, Wenlong Zhao, Ankita Gupta
 
 # Build settings
 markdown:       kramdown
