Updated author details

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ current_sem_end: 2024-11-22
 
 # Author
 author:
-  name:         Kalpesh Krishna, Neha Kennard, Wenlong Zhao, Ankita Gupta
+  name:         Kalpesh Krishna, Neha Kennard, Wenlong Zhao, Ankita Gupta, Sankaran Vaidyanathan
 
 # Build settings
 markdown:       kramdown
